AllocateUninitializedArray C2 intrinsic fails with void.class input

XMLWordPrintable

    • b112
    • 9
    • b05

        # Internal Error (/oracle/jdk/open/src/hotspot/share/opto/library_call.cpp:3584), pid=278705, tid=278720
        # guarantee(method_id == method->intrinsic_id()) failed: must match

        Current CompileTask:
        C2: 2092 419 4 jdk.internal.misc.Unsafe::allocateUninitializedArray (55 bytes)

        Stack: [0x00007f6866a38000,0x00007f6866b39000], sp=0x00007f6866b353c0, free space=1012k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x12b2f18] LibraryCallKit::generate_method_call(vmIntrinsicID, bool, bool)+0x68
        V [libjvm.so+0x12b3e28] LibraryCallKit::inline_unsafe_newArray(bool)+0x538
        V [libjvm.so+0x12b9fd6] LibraryIntrinsic::generate(JVMState*)+0x406
        V [libjvm.so+0xb66177] Parse::do_call()+0x4f7
        V [libjvm.so+0x15f9bb8] Parse::do_one_bytecode()+0x428
        V [libjvm.so+0x15e7139] Parse::do_one_block()+0x609
        V [libjvm.so+0x15e8051] Parse::do_all_blocks()+0x121
        V [libjvm.so+0x15ecb45] Parse::Parse(JVMState*, ciMethod*, float)+0xbb5
        V [libjvm.so+0x84dea5] ParseGenerator::generate(JVMState*)+0x115
        V [libjvm.so+0xa1b44b] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0xf4b
        V [libjvm.so+0x84b76c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
        V [libjvm.so+0xa2bb48] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe88
        V [libjvm.so+0xa2c798] CompileBroker::compiler_thread_loop()+0x5a8
        V [libjvm.so+0x18ba7b6] JavaThread::thread_main_inner()+0x256
        V [libjvm.so+0x18c1130] Thread::call_run()+0x100
        V [libjvm.so+0x15a3c06] thread_native_entry(Thread*)+0x116

              Assignee:
              Tobias Hartmann
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: