8259339: AllocateUninitializedArray C2 intrinsic fails with void.class input